--- a/CppWinForm1.vcxproj.filters
+++ b/CppWinForm1.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="MyForm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Tsack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
